@@ -7,6 +7,11 @@
 	* include/port.h: Prototype it when !HAVE_WAITFD.
 	* libport/Build: Adjust.
 
+	Drop RD_PREINIT / RD_POSTINIT.
+
+	* include/rtld_db.h (rd_event_e): Drop them.
+	* libdtrace/dt_proc.c (dt_proc_rdevent): Likewise.
+
 2013-06-04  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/Build (DRTI_OBJ): Always build -fPIC.
